Trying to fix the overflow and margin issues

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -227,13 +227,13 @@ footer {
 .container {
   max-width: 40em;
   width: 100%;
-  padding: 1em 0 1em 1em;
+  margin: 1em 1em 1em 1em;
   ul, ol {
     margin-left: 2em !important;
-    margin-right: 0 !important;
+    margin-right: 2em !important;
   }
   p {
-    margin-right: 0 !important;
+    margin-right: 2em !important;
   }
   @media only screen and (max-device-width: 480px) {
     max-width: 100% !important;
